--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "./src/bin/www.ts",
   "license": "MIT",
-  "devDependencies": {
-    "cross-env": "^7.0.2",
+  "scripts": {
+    "start": "cross-env DEBUG=app:* nodemon --watch 'src/**/*' -e ts --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register ./src/bin/www.ts",
+    "clean": "rimraf ./build/* && rimraf ./logs/*",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "dev": "cross-env DEBUG=app:* nodemon --watch 'src/**/*' -e ts --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register ./src/bin/www.ts"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.7",
@@ -15,15 +21,7 @@
     "tslint-defocus": "^2.0.6",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-origin-ordered-imports-rule": "^1.3.0-0",
-    "typescript": "^4.0.5"
-  },
-  "scripts": {
-    "start": "cross-env DEBUG=app:* nodemon --watch 'src/**/*' -e ts --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register ./src/bin/www.ts",
-    "clean": "rimraf ./build/* && rimraf ./logs/*",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "dev": "cross-env DEBUG=app:* nodemon --watch 'src/**/*' -e ts --exec ./node_modules/.bin/ts-node -r tsconfig-paths/register ./src/bin/www.ts"
-  },
-  "dependencies": {
+    "typescript": "^4.0.5",
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
